--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "p-retry": "^6.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "siwe": "^2.3.2",
     "viem": "^2.13.6",
     "wagmi": "^2.9.9",
     "zustand": "^4.5.2"
