--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-intl": "^3.14.1",
+    "next-pwa": "^5.6.0",
     "p-retry": "^6.2.0",
     "react": "^18",
     "react-dom": "^18",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.4",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
